@@ -839,9 +839,9 @@
         }
         else {
             // Reset the button, since we are un-collapsing nodes here.
-            kdt.removeClass('.kcollapsed', 'kcollapsed');
+            kdt.removeClass(wrapper.querySelectorAll('.kcollapsed'), 'kcollapsed');
             // Move the original element back into the viewport.
-            kdt.krexx.jumpTo(element);
+            kdt.krexx.jumpTo(element, true);
         }
     };
 
