@@ -1,6 +1,7 @@
 <li class="kchild">
     <div class="kel">
         <span class="kel-bg keditable"></span>
+        <em class="karrow ktype"></em>
         <span class="kname">{name}</span>
         <span class="keditable">{normal}</span>
         <span class="ktype">({source})</span>
