@@ -12,8 +12,8 @@
                   <caption class="kheadline">Additional data</caption>
                   <tbody class="kdatabody">
                     <tr>
-                      <td>No data available</td>
-                      <td></td>
+                      <td class="kinfo">No data available</td>
+                      <td class="kdesc"></td>
                     </tr>
                   </tbody>
                 </table>
