@@ -36,7 +36,7 @@ namespace Brainworxx\Krexx\Analyse\Callback\Analyse;
 
 use Brainworxx\Krexx\Analyse\Callback\AbstractCallback;
 use Brainworxx\Krexx\Service\Config\Fallback;
-use Service\Reflection\ReflectionClass;
+use Brainworxx\Krexx\Service\Reflection\ReflectionClass;
 
 /**
  * Object analysis methods.
@@ -61,7 +61,7 @@ class Objects extends AbstractCallback
     public function callMe()
     {
         $output = $this->pool->render->renderSingeChildHr() . $this->dispatchStartEvent();
-        
+
         $ref = $this->parameters['ref'] = new ReflectionClass($this->parameters['data']);
 
         // Dumping public properties.
